Add 2024 tech report

--- a/src/components/landingPage/introText.astro
+++ b/src/components/landingPage/introText.astro
@@ -2,7 +2,7 @@
 ---
 
 <div
-  class="custom-xl:items-begin mx-8 md:my-16 my-8 flex flex-col-reverse md:flex-col items-center justify-center gap-8 custom-xl:flex-row"
+  class="custom-xl:items-begin mx-8 my-8 flex flex-col-reverse items-center justify-center gap-8 md:my-16 md:flex-col custom-xl:flex-row"
 >
   <div class="max-w-7xl flex-col custom-xl:max-w-md">
     <h1
