--- a/src/pages/partnerships.astro
+++ b/src/pages/partnerships.astro
@@ -8,7 +8,7 @@ import PartnersPage from "../layouts/partnersPage.astro";
 <PartnersPage>
   <IntroText />
 
-  <PartnerCarousel></PartnerCarousel>
+  <PartnerCarousel />
 
   <Footer />
 </PartnersPage>
