--- a/src/components/navigation/sidebarToggle.astro
+++ b/src/components/navigation/sidebarToggle.astro
@@ -1,12 +1,11 @@
 ---
-
 ---
 
 <button
   id="sidebar-toggle"
   type="button"
   aria-pressed="false"
-  class=" md:hidden flex w-fit gap-3 rounded-full border bg-dnt-orange-200/50 p-3  mb-2 hover:bg-dnt-orange-200/75 dark:border-dnt-orange-200/20 dark:bg-dnt-orange-200/10 dark:hover:border-dnt-orange-200/50"
+  class="mb-2 flex w-fit gap-3 rounded-full border bg-dnt-orange-200/50 p-3 hover:bg-dnt-orange-200/75 dark:border-dnt-orange-200/20 dark:bg-dnt-orange-200/10 dark:hover:border-dnt-orange-200/50 md:hidden"
 >
   Filters
 </button>
@@ -14,8 +13,9 @@
 <script is:inline>
   const buttons = document.querySelectorAll("#sidebar-toggle");
 
-  console.log(buttons)
-  buttons.forEach(button => button.addEventListener('click', () => {
+  console.log(buttons);
+  buttons.forEach((button) =>
+    button.addEventListener("click", () => {
       // eslint-disable-next-line -- html query selector is already defined in the themeToggleButton script
       html.classList.toggle("mobile-sidebar-toggle");
       button.toggleAttribute("aria-pressed");
@@ -24,5 +24,6 @@
         button.getAttribute("aria-pressed") === null
           ? `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 stroke-current" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg><span class="sr-only">Close sidebar</span>`
           : `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 stroke-current" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg><span class="sr-only">Toggle sidebar</span>`;
-    }));
+    })
+  );
 </script>
