--- a/src/components/partnershipsPage/introText.astro
+++ b/src/components/partnershipsPage/introText.astro
@@ -1,82 +1,90 @@
 ---
-import worldSVG from "../../svgs/earth_line.svg"
-import codeSVG from "../../svgs/code_fill.svg"
-import handSVG from "../../svgs/hand_heart_line.svg"
-import pinSVG from "../../svgs/pin_fill.svg"
-import cupSVG from "../../svgs/teacup_line.svg?raw"
+import worldSVG from "../../svgs/earth_line.svg";
+import codeSVG from "../../svgs/code_fill.svg";
+import handSVG from "../../svgs/hand_heart_line.svg";
+import pinSVG from "../../svgs/pin_fill.svg";
+import cupSVG from "../../svgs/teacup_line.svg?raw";
 ---
 
 <div
   class="lg:items-begin my-16 flex flex-col items-center justify-center text-center md:text-left"
 >
-    <h1
-      class="mb-8 text-center text-5xl font-bold text-partner-text dark:text-dnt-orange-400"
+  <h1
+    class="mb-8 text-center text-5xl font-bold text-partner-text dark:text-dnt-orange-400"
+  >
+    Partnerships
+  </h1>
+  <div
+    class="align-center flex w-5/6 flex-col items-baseline justify-between md:flex-row"
+  >
+    <div
+      class="mt-3 flex flex-col items-center justify-center md:mt-0"
+      id="connect"
     >
-      Partnerships
-    </h1>
-    <div class = "flex flex-col items-baseline align-center w-5/6 justify-between md:flex-row">
-      <div class ="flex flex-col items-center justify-center mt-3 md:mt-0" id="connect">
-        <img
-        src={worldSVG}
-        alt="SVG of the world"
-        >
-        <p class="w-2/3 mt-5">
-          Make meaningful <span class="text-partner-text">connections</span> by becoming our partner.
-          From students to businesses, you will increase the network of your organization.
-        </p>
-      </div>
-      <div class ="flex flex-col items-center justify-center mt-3 md:mt-0" id="give">
-        <img
-        src={handSVG}
-        alt="SVG representing giving"
-        >
-        <p class="w-2/3 mt-5">
-          By becoming our partner, you <span class="text-partner-text">invest</span> in innovation, research and education.
-          Together we will achieve better <span class="text-partner-text">education</span>, work on <span class="text-partner-text">research</span> and <span class="text-partner-text">innovate</span> in the field of robotics.
-        </p>
-      </div>
-      <div class ="flex flex-col items-center justify-center mt-3 md:mt-0" id="code">
-        <img
-        src={codeSVG}
-        alt="SVG of code"
-        >
-        <p class="w-2/3 mt-5">
-          Technology is the basis of our society. In collaborating with us,
-          your organization will support new <span class="text-partner-text">technologies</span>
-          that can change our way of living.
-        </p>
-      </div>
-      <div class ="flex flex-col items-center justify-center mt-3 md:mt-0" id="pin">
-        <img
-        src={pinSVG}
-        alt="SVG of a pin"
-        >
-        <p class="w-2/3 mt-5">
-          Put your organization in the <span class="text-partner-text">spotlight</span> at
-          important events. Make sure the name of your organization is known accross the sector of
-          <span class="text-partner-text">robotics</span> by collaborating with us.
-        </p>
-      </div>
+      <img src={worldSVG} alt="SVG of the world" />
+      <p class="mt-5 w-2/3">
+        Make meaningful <span class="text-partner-text">connections</span> by becoming
+        our partner. From students to businesses, you will increase the network of
+        your organization.
+      </p>
     </div>
+    <div
+      class="mt-3 flex flex-col items-center justify-center md:mt-0"
+      id="give"
+    >
+      <img src={handSVG} alt="SVG representing giving" />
+      <p class="mt-5 w-2/3">
+        By becoming our partner, you <span class="text-partner-text"
+          >invest</span
+        > in innovation, research and education. Together we will achieve better
+        <span class="text-partner-text">education</span>, work on <span
+          class="text-partner-text">research</span
+        > and <span class="text-partner-text">innovate</span> in the field of robotics.
+      </p>
+    </div>
+    <div
+      class="mt-3 flex flex-col items-center justify-center md:mt-0"
+      id="code"
+    >
+      <img src={codeSVG} alt="SVG of code" />
+      <p class="mt-5 w-2/3">
+        Technology is the basis of our society. In collaborating with us, your
+        organization will support new <span class="text-partner-text"
+          >technologies</span
+        >
+        that can change our way of living.
+      </p>
+    </div>
+    <div
+      class="mt-3 flex flex-col items-center justify-center md:mt-0"
+      id="pin"
+    >
+      <img src={pinSVG} alt="SVG of a pin" />
+      <p class="mt-5 w-2/3">
+        Put your organization in the <span class="text-partner-text"
+          >spotlight</span
+        > at important events. Make sure the name of your organization is known accross
+        the sector of
+        <span class="text-partner-text">robotics</span> by collaborating with us.
+      </p>
+    </div>
+  </div>
 </div>
 
 <div
-  class="bg-white dark:bg-dark-gray lg:items-begin flex flex-col items-center justify-center pt-10 md:px-0 px-10"
+  class="lg:items-begin flex flex-col items-center justify-center bg-white px-10 pt-10 dark:bg-dark-gray md:px-0"
 >
-    <h1
-      class="mb-4 text-center text-5xl font-bold dark:text-white"
-    >
-      Interested?
-    </h1>
-    <div class="mb-5 md:mb-3 flex flex-col-reverse md:flex-row items-center">
-      <h3
-        class="text-center text-3xl dark:text-white mr-0 md:mr-3"
-      >
-        Hit us up for a cup of coffee.
-      </h3>
-        <Fragment set:html={cupSVG} />
-    </div><a
-      href="mailto:info@dutchnaoteam.nl"
-      class="mb-16 text-center text-xl dark:text-dnt-orange-400 text-partner-text inline-block"
-      >partnerships@dutchnaoteam.nl</a>
+  <h1 class="mb-4 text-center text-5xl font-bold dark:text-white">
+    Interested?
+  </h1>
+  <div class="mb-5 flex flex-col-reverse items-center md:mb-3 md:flex-row">
+    <h3 class="mr-0 text-center text-3xl dark:text-white md:mr-3">
+      Hit us up for a cup of coffee.
+    </h3>
+    <Fragment set:html={cupSVG} />
+  </div><a
+    href="mailto:info@dutchnaoteam.nl"
+    class="mb-16 inline-block text-center text-xl text-partner-text dark:text-dnt-orange-400"
+    >partnerships@dutchnaoteam.nl</a
+  >
 </div>
